# RunLLMLocally

./: .gitignore  CLAUDE.md  FEATURE_SPECS.md  FEATURE_SPECS_MultiModal_Visual.md  IMPLEMENTATION_SUMMARY.md  M3_GPU_OPTIMIZATION.md  MEMORY_SOLUTIONS.md  MULTIMODAL_README.md  README_MULTIMODAL.md  create_sample_image.py  demo_loading.py  download_model.py  pyproject.toml  requirements.txt  run_deepseek.py  run_deepseek_improved.py  run_multimodal.py  test_cli.py  test_deepseek.py  test_m3_optimization.py  test_multimodal.py  test_multimodal_demo.py  test_quantization_fix.py
